--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Projeto Login</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mq.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -17,7 +19,29 @@
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a)!</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post">
+                    <p>
+                        <span class="material-symbols-outlined">
+                            person
+                            </span>
+                        <label for="ilogin"></label>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" required>
+                       
+                    </p>
+
+                    <p>
+                        <span class="material-symbols-outlined">
+                            lock
+                            </span>
+                        <label for="isenha"></label>
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha" required minlength="8">
+                    </p>
+
+                    <p>
+                        <input type="submit" value="Enviar">
+                        <a href="Esqueci.html">Esqueci a Senha</a>
+                    </p>
+                </form>
             </div>
         </section>
     </main>
