--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a)!</p>
                 <form action="login.php" method="post">
-                    <p>
+                    <p class="campo">
                         <span class="material-symbols-outlined">
                             person
                             </span>
@@ -29,7 +29,7 @@
                        
                     </p>
 
-                    <p>
+                    <p class="campo">
                         <span class="material-symbols-outlined">
                             lock
                             </span>
@@ -39,7 +39,7 @@
 
                     <p>
                         <input type="submit" value="Enviar">
-                        <a href="Esqueci.html">Esqueci a Senha</a>
+                        <a href="Esqueci.html" class="botao">Esqueci a Senha</a>
                     </p>
                 </form>
             </div>
